# llm_gateway

./: .gitignore  CLAUDE.md  README.md  llm_route.yml  pyproject.toml  settings.json
.claude/: settings.json
.githooks/: pre-push
.github/rulesets/: Main Branch Protection.json  Release Pipeline.json
.github/workflows/: ci.yml
diffusion_server/: pipeline.py  server.py
docs/: git_workflow.md
docs/product/release-notes/: v0.1.0-release-notes.md  v0.2.0-release-notes.md  v0.2.1-release-notes.md  v0.2.2-release-notes.md
docs/reference/: claude-code.md  claude_structured_output.md  service-diffusion.md  service-ollama.md
docs/software/: llm-interfaces.md
docs/test/: ci_cd_plan.md  test_strategy.md
scripts/: install.sh  run.sh  run_diffusion.sh  stop.sh  stop_diffusion.sh  test.sh
src/: __init__.py  _litellm_workaround.py  _retry.py  config.py  factory.py  responses.py  server.py  types.py
src/impl/: __init__.py  impl_cli.py  impl_diffusion_server.py  impl_ipadapter.py  impl_litellm.py  impl_ollama.py
tests/: conftest.py  test_config.py  test_core_llm_cli.py  test_core_llm_construction_params.py  test_core_llm_factory.py  test_core_llm_ipadapter.py  test_core_llm_litellm.py  test_core_llm_ollama.py  test_core_llm_responses.py  test_core_llm_retry.py  test_core_llm_workaround.py  test_coverage_improvements.py  test_ipadapter_sanity.py  test_server.py  test_structured_output_integration.py
