[project]
name = "llm_gateway"
version = "1.0.0"
description = "General-purpose LLM gateway — unified typed interface for Ollama, LiteLLM, and Claude CLI"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "requests>=2.31.0",
    "litellm>=1.40.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]
dev = [
    "llm_gateway[test]",
    "ruff>=0.4.0",
]
diffusion = [
    "torch>=2.2.0",
    "diffusers>=0.30.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "huggingface_hub>=0.23.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
    "opencv-python-headless>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "integration: requires a running Ollama server (skipped in CI)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
